<?xml version="1.0" encoding="UTF-8" standalone="no"?>
<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="7706" systemVersion="14D136" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" initialViewController="vXZ-lx-hvc">
    <dependencies>
        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="7703"/>
        <capability name="Alignment constraints with different attributes" minToolsVersion="5.1"/>
    </dependencies>
    <scenes>
        <!--View Controller-->
        <scene sceneID="ufC-wZ-h7g">
            <objects>
                <viewController id="vXZ-lx-hvc" customClass="ViewController" customModule="ClickCounter" customModuleProvider="target" sceneMemberID="viewController">
                    <layoutGuides>
                        <viewControllerLayoutGuide type="top" id="jyV-Pf-zRb"/>
                        <viewControllerLayoutGuide type="bottom" id="2fi-mo-0CV"/>
                    </layoutGuides>
                    <view key="view" contentMode="scaleToFill" id="kh9-bI-dsS">
                        <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
                        <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                        <subviews>
                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="0" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="BFv-25-zLQ" userLabel="Count Label">
                                <rect key="frame" x="0.0" y="243" width="600" height="115"/>
                                <accessibility key="accessibilityConfiguration" label="count"/>
                                <fontDescription key="fontDescription" type="boldSystem" pointSize="96"/>
                                <color key="textColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
                                <nil key="highlightedColor"/>
                            </label>
                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="5AQ-kj-wKi" userLabel="Decrement Button">
                                <rect key="frame" x="5" y="510" width="30" height="70"/>
                                <accessibility key="accessibilityConfiguration" label="decrement"/>
                                <fontDescription key="fontDescription" type="boldSystem" pointSize="48"/>
                                <state key="normal" title="-">
                                    <color key="titleColor" red="0.0" green="0.0" blue="1" alpha="1" colorSpace="calibratedRGB"/>
                                    <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
                                </state>
                                <connections>
                                    <action selector="decrementCount" destination="vXZ-lx-hvc" eventType="touchUpInside" id="Axd-rd-OFN"/>
                                </connections>
                            </button>
                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="X7O-Ve-J4h" userLabel="Increment Button">
                                <rect key="frame" x="385" y="510" width="30" height="70"/>
                                <accessibility key="accessibilityConfiguration" label="increment"/>
                                <fontDescription key="fontDescription" type="boldSystem" pointSize="48"/>
                                <state key="normal" title="+">
                                    <color key="titleColor" red="0.0" green="0.0" blue="1" alpha="1" colorSpace="calibratedRGB"/>
                                    <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
                                </state>
                                <connections>
                                    <action selector="incrementCount" destination="vXZ-lx-hvc" eventType="touchUpInside" id="xxa-Iz-Xmz"/>
                                </connections>
                            </button>
                        </subviews>
                        <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
                        <gestureRecognizers/>
                        <constraints>
                            <constraint firstItem="X7O-Ve-J4h" firstAttribute="centerX" secondItem="kh9-bI-dsS" secondAttribute="left" constant="400" id="0to-oV-Gai"/>
                            <constraint firstItem="2fi-mo-0CV" firstAttribute="top" secondItem="5AQ-kj-wKi" secondAttribute="bottom" constant="20" id="Bdy-is-UJR"/>
                            <constraint firstAttribute="width" secondItem="BFv-25-zLQ" secondAttribute="width" id="Lkj-It-LNf"/>
                            <constraint firstItem="5AQ-kj-wKi" firstAttribute="centerX" secondItem="kh9-bI-dsS" secondAttribute="left" constant="20" id="QHa-rS-LUW"/>
                            <constraint firstItem="X7O-Ve-J4h" firstAttribute="centerY" secondItem="5AQ-kj-wKi" secondAttribute="centerY" id="V62-q3-pWA"/>
                            <constraint firstAttribute="centerX" secondItem="BFv-25-zLQ" secondAttribute="centerX" id="aYr-4C-b8B"/>
                            <constraint firstAttribute="centerY" secondItem="BFv-25-zLQ" secondAttribute="centerY" id="cbb-WG-SRz"/>
                        </constraints>
                        <connections>
                            <outletCollection property="gestureRecognizers" destination="SdQ-3M-oRr" appends="YES" id="Ugx-GP-KOu"/>
                            <outletCollection property="gestureRecognizers" destination="WWX-dm-PbP" appends="YES" id="WdW-8B-0Wx"/>
                        </connections>
                    </view>
                    <connections>
                        <outlet property="decrementButtonHorizontalPlacement" destination="QHa-rS-LUW" id="Use-Cw-fmm"/>
                        <outlet property="incrementButtonHorizontalPlacement" destination="0to-oV-Gai" id="acl-cX-mkY"/>
                        <outlet property="label" destination="BFv-25-zLQ" id="IgK-1v-OTE"/>
                    </connections>
                </viewController>
                <placeholder placeholderIdentifier="IBFirstResponder" id="x5A-6p-PRh" sceneMemberID="firstResponder"/>
                <swipeGestureRecognizer direction="right" id="SdQ-3M-oRr" userLabel="Swipe Right">
                    <connections>
                        <action selector="decrementCount" destination="vXZ-lx-hvc" id="GRj-zZ-RUY"/>
                    </connections>
                </swipeGestureRecognizer>
                <swipeGestureRecognizer direction="left" id="WWX-dm-PbP" userLabel="Swipe Left">
                    <connections>
                        <action selector="incrementCount" destination="vXZ-lx-hvc" id="wfP-Og-oL7"/>
                    </connections>
                </swipeGestureRecognizer>
            </objects>
        </scene>
    </scenes>
</document>
